
syntax = "proto3";
package neonracer;

option java_package = "neonracer.network.proto";
option java_outer_classname = "Login";

/*
These messages affect only the sending client and the server.
They are not forwarded to other connected clients.
*/

enum LoginStatus {
    SUCCESS = 0;
    NICKNAME_TAKEN = 1;
}

message LoginRequest {
    /* Has to be unique. */
    string nickname = 1;
}

message LoginResponse {

    LoginStatus status = 1;

    /* Incremental ID only present if Login.Status.SUCCESS. */
    uint32 clientId = 2;
}
